update html and style

--- a/index.html
+++ b/index.html
@@ -24,8 +24,16 @@
         <div class="title-container">
             <h1>PERFECTION IS ATTAINED</h1>
             <!-- Smaller tagline (h2) -->
-        <h2>...by slow degrees.</h2>
-        <h3>design however, can always have improvements.</h3>
+        </div>
+
+        <div class="h2-container">
+           <h2>...by slow degrees.</h2>
+            <!-- Smaller tagline (h2) -->
+        </div>
+        
+        <div class="h3-container">
+           <h3>design however, can always have improvements.</h3>
+            <!-- Smaller tagline (h2) -->
         </div>
     </header>
 
