commit new files

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
            <h2>...by slow degrees.</h2>
             <!-- Smaller tagline (h2) -->
         </div>
-        
+
         <div class="h3-container">
            <h3>design however, can always have improvements.</h3>
             <!-- Smaller tagline (h2) -->
@@ -41,17 +41,27 @@
     <div class="white-section">
         <!-- You can add content here later -->
          <div class="images-container">
-   
+    
             <!-- Image 1 (Green Box) -->
-    <div class="image-container fixed-left">
-        <img src="images/ps.svg" alt="Green Box">
+   <!-- <div class="image-container fixed-left"> -->
+    <!--   <img src="images/ps.svg" alt="Green Box">-->
+      <!--<h4>EVELYN STEPHEN</h4>
     </div>
 
-    <!-- Image 2 (Map) -->
-    <div class="image-container grouped-image">
+     Image 2 (Map) -->
+    <!--<div class="image-container grouped-image">
         <img src="images/grouped.svg" alt="Map">
+    </div>-->
+
+    <div class="image-container fixed-left"> 
+      <img src="images/2.svg" alt="Green Box">
     </div>
 
+ <div class="image-container grouped-image">
+        <img src="images/3.svg" alt="Map">
+    </div>
+
+</div>
    
 </div>
     </div>
