update index file

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 <footer>
     <!-- Left Side: Icon -->
     <div class="footer-left">
-        <a href="https://www.vsco.co/elevyn-s">
-            <img src="images/vsco4.svg" alt="Product Design" class="footer-icon-left">
+        <a href="https://vsco.co/elevyn-s/gallery">
+            <img src="images/vsco4.svg" alt="vsco" class="footer-icon-left">
         </a>
     </div>
 
@@ -101,8 +101,8 @@
 
     <!-- Right Side: Icon -->
     <div class="footer-right">
-        <a href="https://www.example.com/music-composition">
-            <img src="images/li.svg" alt="Music Composition" class="footer-icon">
+        <a href="https://www.linkedin.com/in/evelyn-varghese-stephen-6a434929a">
+            <img src="images/li.svg" alt="linkedin" class="footer-icon">
         </a>
     </div>
 </footer>
