update index page

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     
 
     <div class="full-bleed">
-      <img src="images/fpv.svg" alt="Green Box">
+      <img src="images/fpv2.svg" alt="Green Box">
   
     </div>
 
@@ -76,7 +76,7 @@
   </a>
 
   <a class="portfolio-btn" href="mc.html" target="_blank">
-    <img src="images/mc.svg" alt="Music composition">
+    <img src="images/mc2.svg" alt="Music composition">
   </a>
 </div>
 
